--- a/WhatShouldIPlay/WhatShouldIPlay.csproj
+++ b/WhatShouldIPlay/WhatShouldIPlay.csproj
@@ -214,13 +214,19 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Domain\Directors.cs" />
     <Compile Include="Models\Domain\EncodedImage.cs" />
+    <Compile Include="Models\Domain\GameAttributes.cs" />
+    <Compile Include="Models\Domain\GameProfile.cs" />
+    <Compile Include="Models\Domain\Genres.cs" />
+    <Compile Include="Models\Domain\Platforms.cs" />
     <Compile Include="Models\Domain\ScrapedPost.cs" />
+    <Compile Include="Models\Domain\Studios.cs" />
     <Compile Include="Models\Domain\User.cs" />
     <Compile Include="Models\Request\UserFile.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\Request\GameProfile.cs" />
+    <Compile Include="Models\Request\GameProfileRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CryptographyService.cs" />
     <Compile Include="Services\FileUploadService.cs" />
